--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.4.5
   flutter_secure_storage: ^8.0.0
   flutter_hooks: ^0.16.0
+  sidebarx: ^0.16.1
 
 dev_dependencies:
   flutter_test:
