--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   flutter_hooks: ^0.16.0
   sidebarx: ^0.16.1
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
