--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   flutter_hooks: ^0.16.0
   sidebarx: ^0.16.1
+  collection: ^1.17.2
   
 
 dev_dependencies:
