--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.myteam.teacherhelper">
+
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
+
    <application
         android:label="teacherhelper"
         android:name="${applicationName}"
