--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,14 @@
 
     <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 
+    <supports-screens
+    android:smallScreens="true"
+    android:normalScreens="true"
+    android:largeScreens="true"
+    android:xlargeScreens="true"
+    android:requiresSmallestWidthDp="1280"
+    />
+
    <application
         android:label="teacherhelper"
         android:name="${applicationName}"
@@ -37,4 +45,12 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
+    <supports-screens
+    android:smallScreens="true"
+    android:normalScreens="true"
+    android:largeScreens="true"
+    android:xlargeScreens="true"
+    android:requiresSmallestWidthDp="1280"
+    />
 </manifest>
