--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   sidebarx: ^0.16.1
   collection: ^1.17.2
   intl: ^0.17.0
+  open_file: ^3.3.2
+  path_provider: ^2.1.1
+  syncfusion_flutter_xlsio: ^21.2.3
   
 
 dev_dependencies:
