--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,14 +3,6 @@
 
     <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 
-    <supports-screens
-    android:smallScreens="true"
-    android:normalScreens="true"
-    android:largeScreens="true"
-    android:xlargeScreens="true"
-    android:requiresSmallestWidthDp="1280"
-    />
-
    <application
         android:label="teacherhelper"
         android:name="${applicationName}"
@@ -47,8 +39,8 @@
     </application>
 
     <supports-screens
-    android:smallScreens="true"
-    android:normalScreens="true"
+    android:smallScreens="false"
+    android:normalScreens="false"
     android:largeScreens="true"
     android:xlargeScreens="true"
     android:requiresSmallestWidthDp="1280"
